#83, #81, #80 gradle+tests